<resources>
    <string name="app_name">CrystalAir</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="PassengerUsername">Username</string>
    <string name="PassengerPassword">Password</string>
    <string name="Login">Login</string>
    <string name="logo">Crystal Air</string>
    <string name="title_activity_passenger_details">PassengerDetails</string>
    <string name="PassengerFlightsBtn">Book Tickets</string>
    <string name="PassengerTicketsBtn">Refund Ticket</string>
    <string name="title_activity_passenger_signup">PassengerSignup</string>
    <string name="PSUhintusername">Username</string>
    <string name="PSUhintpassword">Password</string>
    <string name="PSUhintfirstname">Firstname</string>
    <string name="PSUhintlastname">Lastname</string>
    <string name="PSUhintcontact">Contact Number</string>
    <string name="PSUhintaddress">Address</string>
    <string name="PSUsignupbtn">Sign Up</string>
    <string name="title_activity_book_tickets">BookTickets</string>
    <string name="BTflighthint">Select Flight Below</string>
    <string name="BThintclass">Select Class Below</string>
    <string name="BTbtnlabel">Purchase Ticket</string>
    <string name="PDfirstnamelbl">First name</string>
    <string name="PDusernamelbl">Username</string>
    <string name="Mainsignupbtn">Sign Up</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_ticket_item">TicketItemActivity</string>
</resources>
