<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".PassengerLogin"
    android:id="@+id/MainLayout"
    android:background="@android:color/holo_blue_dark">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/PassengerUsername"
        android:ems="10"
        android:id="@+id/MainUsername"
        android:textSize="50sp"
        android:gravity="center"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/MainPassword"
        android:textSize="50sp"
        android:hint="@string/PassengerPassword"
        android:clickable="false"
        android:gravity="center"
        android:layout_alignTop="@+id/MainUsername"
        android:layout_alignRight="@+id/MainUsername"
        android:layout_alignEnd="@+id/MainUsername"
        android:layout_marginTop="101dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/MainLoginBtn"
        android:text="@string/Login"
        android:textSize="65sp"
        android:layout_below="@+id/MainPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="71dp"
        android:background="@android:color/holo_blue_light"
        android:onClick="Login"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/MainUsername"
        android:foregroundGravity="top|center">

        <ImageView
            android:layout_width="400dp"
            android:layout_height="195dp"
            android:id="@+id/crystalairlogo"
            android:contentDescription="@string/logo"
            android:background="@android:color/holo_blue_light"
            android:layout_gravity="bottom|center_horizontal"
            android:src="@mipmap/crystallogo" />

        <TextView
            android:layout_width="350dp"
            android:layout_height="100dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/logo"
            android:id="@+id/MainLogo"
            android:layout_gravity="top|center"
            android:textSize="70sp" />
    </FrameLayout>
</RelativeLayout>
