<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.crystalair.crystalair.BookTickets"
    android:background="@android:color/holo_blue_dark">

    <ListView
        android:layout_width="500dp"
        android:layout_height="300dp"
        android:id="@+id/BTflightlistview"
        android:background="@android:color/holo_blue_light"
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/BTshowflight"
        android:hint="@string/BTflighthint"
        android:textSize="50sp"
        android:background="@android:color/holo_blue_light"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/BTflightlistview"
        android:layout_alignStart="@+id/BTflightlistview"
        android:layout_marginTop="64dp"
        android:editable="false" />

    <ListView
        android:layout_width="500dp"
        android:layout_height="300dp"
        android:id="@+id/BTclasslistview"
        android:background="@android:color/holo_blue_light"
        android:layout_alignWithParentIfMissing="false"
        android:longClickable="false"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/BTshowclass"
        android:hint="@string/BThintclass"
        android:layout_alignTop="@+id/BTshowflight"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@android:color/holo_blue_light"
        android:textSize="50sp" />

    <Button
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:text="@string/BTbtnlabel"
        android:onClick="BuyTicket"
        android:id="@+id/BTbuybtn"
        android:textSize="50sp"
        android:background="@android:color/holo_blue_light"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
